--- a/views/products/new.liquid
+++ b/views/products/new.liquid
@@ -12,6 +12,7 @@
                     name="name"
                     placeholder="product name"
                 >
+                
                 <label class="form-label">Color: </label>
                 <input
                     class="form-control"
@@ -19,14 +20,22 @@
                     name="color"
                     placeholder="product color"
                 >
-                  <label class="form-label">Amount: </label>
+                  
+                  <label class="form-label">Family: </label>
                 <input
                     class="form-control"
-                    type="number"
-                    name="amount"
-                    placeholder="amount"
+                    type="text"
+                    name="family"
+                    placeholder="family"
                 >
-                <label class="form-label">GoreTex: </label>
+                      
+                      <label class="form-label">Updated: </label>
+                <input
+                    class="form-check-input"
+                    type="checkbox"
+                    name="updated"
+                >
+                    <label class="form-label">GoreTex: </label>
                 <input
                     class="form-check-input"
                     type="checkbox"
@@ -34,9 +43,9 @@
                 >
             </fieldset>
             <input
-                class="btn btn-success"
+                class="btn btn-info"
                 type="submit"
-                value="Create A New Product"
+                value="Submit"
             >
         </form>
     </div>
