--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,14 @@
 .form-label{
   width: 240px;
 } 
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+
+/* @font-face {
+  font-family: myFont;
+  src: url(https://fonts.googleapis.com/css2?family=Oswald&display=swap);
+} */
+
+* {
+  font-family: Oswald, sans-serif;
+  font-weight: bold;
+}
