--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -7,12 +7,12 @@
         <title>Product</title>
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel="stylesheet" href="/styles.css" />
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/products/families">Bird Up</a>
+                <a class="navbar-brand" href="/products">Bird Up</a>
                 {% if loggedIn %}
                     <a class="nav-link text-light" href="/products/mine">Logged in as {{username}}</a>
                 {% endif %}
@@ -21,7 +21,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     {% if loggedIn %}
-                        <a class="nav-link text-light" href="/products">All Products</a>
+                        <a class="nav-link text-light" href="/products">Categories</a>
                         <a class="nav-link text-light" href="/products/new">New Product</a> 
                         <a class="nav-link text-light" href="/users/logout">Log Out</a>
 
@@ -38,6 +38,5 @@
             {% endblock %}
         </main>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-        </style>
     </body>
 </html>
