commit to commit

--- a/views/users/signup.liquid
+++ b/views/users/signup.liquid
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="container-sm">
-    <form action="/auth/signup" method="POST">
+    <form action="/users/signup" method="POST">
         <fieldset>
             <legend>Sign Up Here!</legend>
             <label class="form-label">Username: </label>
