--- a/views/products/new.liquid
+++ b/views/products/new.liquid
@@ -13,17 +13,13 @@
         </label>
         <input class="form-control" type="text" name="color" placeholder="product color">
 
-        <label class="form-label">Family:
+        <label class="form-label">Price:
         </label>
-        <input class="form-control" type="text" name="family" placeholder="family">
+        <input class="form-control" type="text" name="price" placeholder="price">
 
-        <label class="form-label">Updated:
+        <label class="form-label">Info:
         </label>
-        <input class="form-check-input" type="checkbox" name="updated">
-        
-        <label class="form-label">GoreTex:
-        </label>
-        <input class="form-check-input" type="checkbox" name="waterProof">
+        <input class="form-control" type="text" name="info" type="info" placeholder="info">
       </fieldset>
       <input class="btn btn-info" type="submit" value="Submit">
     </form>
