--- a/public/styles.css
+++ b/public/styles.css
@@ -1,14 +1,46 @@
-
-
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 
 @import '~bootstrap-icons/font/bootstrap-icons';
 
-.form-label{
+.form-label {
   width: 240px;
-} 
+}
 
 * {
-  font-family: Oswald, sans-serif;
+  font-family: Oswald, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: bold;
+}
+
+.card-img {
+  width: 850px;
+  height: 550px;
+}
+
+.card-title {
+  color: antiquewhite;
+  font-size: 32px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  text-align: right;
+  word-wrap: break-word;
+}
+
+.card-text {
+  color: antiquewhite;
+  font-size: 18px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  text-align: right;
+  word-wrap: normal;
+}
+
+.card-text-bottom {
+  color: antiquewhite;
+  font-style: italic;
+  font-size: 20px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  text-align: right;
+  word-wrap: normal;
+}
+
+.navbar-brand {
+  max-height: 100px;
 }
