--- a/views/index.liquid
+++ b/views/index.liquid
@@ -4,9 +4,9 @@
   <div class="col d-flex justify-content-center" >
     <div class="card bg-light mb-3" style="width: 48rem;">
       <div class="card text-center"></div>
-      <div class="card-header">Flatiron's F/W Training</div>
+      <div class="card-header">Welcome to T.P Outfitters</div>
       <div class="card-body">
-        <h5 class="card-title">Sign in to access information <br> If not, feel free to sign up <br> Only takes 5 seconds!</h5>
+        <h5 class="card-title">Sign in to access information <br> If not a member yet, feel free to sign up <br> Only takes 5 seconds!</h5>
         <div class="btn-group btn-group-lg">
           <a href="/users/signup" class="btn btn-dark">Sign Up</a>
           <a href="/users/login" class="btn btn-success">Login</a>
