--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -12,9 +12,9 @@
     <body>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/products">Bird Up</a>
+                <a class="navbar-brand" href="/products">T.P Outfitters</a>
                 {% if loggedIn %}
-                    <a class="nav-link text-light" href="/products/mine">Logged in as {{username}}</a>
+                    <a class="nav-link text-light">Welcome back,{{username}}!</a>
                 {% endif %}
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
