--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -22,7 +22,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     {% if loggedIn %}
                         <a class="nav-link text-light" href="/products">Categories</a>
-                        <a class="nav-link text-light" href="/products/new">New Product</a> 
+                        <a class="nav-link text-light" href="/products/about">New Product</a> 
                         <a class="nav-link text-light" href="/users/logout">Log Out</a>
 
                     {% else %}
