--- a/views/products/families.liquid
+++ b/views/products/families.liquid
@@ -8,16 +8,18 @@
       alt="Card image">
     <div class="card-img-overlay">
       <div style="margin-top:15px"></div>
-      <h5 class="card-title"> Welcome to T.P Outfitters</h5>
-      <p class="card-text"> We understand there might be gear you no <br> longer need that still has a ton of life left in <br> it. That's where we come in, welcome to the <br> first Outdoor Apparel online open market! <br> Think of us as your friendly outdoors ebay, a <br> spot where you can make sure your old gear <br> ends up with someone who can still use it. <br> 
-      One person's trash is another's summit piece!</p>
+      <h5 class="card-title">
+        Welcome to T.P Outfitters</h5>
+      <p class="card-text">
+        We understand there might be gear you no <br> longer need that still has a ton of life left in <br> it. That's where we come in, welcome to the <br> first Outdoor Apparel online open market! <br> Think of us as your friendly outdoors ebay, a <br> spot where you can make sure your old gear <br> ends up with someone who can still use it. <br>
+        One person's trash is another's summit piece!</p>
       <br>
       <p class="card-text-bottom">Look out for community events near you!</p>
     </div>
   </div>
   <div style="margin-top:165px"></div>
   <div>
-    <h2 class="display-4">Clothing Categories</h2>
+    <h2 class="display-4">Apparel</h2>
     <div class="row">
       {% for family in families %}
         <div class="col-4">
@@ -34,48 +36,59 @@
       {% endfor %}
     </div>
   </div>
+
+  <div style="margin-top:165px"></div>
+
   <div class="container">
     <div class="row">
-        <div class="col-lg-6 mb-4">
-            <div class="card">
-                <img class="card-img-top" src="" alt="">
+      <div class="col-lg-6 mb-4">
+        <div class="card">
+          <img
+            class="card-img-top"
+            src=""
+            alt="">
 
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text-2">
-                        Some quick example text to build on 
-                        the card title and make up the bulk 
-                        of the card's content.
-                    </p>
+          <div class="card-body">
+            <h5 class="card-title-2">Card title</h5>
+            <p class="card-text-2">
+              Some quick example text to build on 
+              the card title and make up the bulk 
+                                      of the card's content.
+            </p>
 
-                    <a href="#" class="btn btn-outline-primary btn-sm">
-                        Card link
-                    </a>
-                    <a href="#" class="btn btn-outline-secondary btn-sm">
-                        <i class="far fa-heart"></i></a>
-                </div>
-            </div>
+            <a href="#" class="btn btn-outline-primary btn-sm">
+              Card link
+            </a>
+            <a href="#" class="btn btn-outline-secondary btn-sm">
+              <i class="far fa-heart"></i>
+            </a>
+          </div>
         </div>
-        <div class="col-lg-6 mb-4">
-            <div class="card">
-                <img class="card-img-top" src="" alt="">
+      </div>
+      <div class="col-lg-6 mb-4">
+        <div class="card">
+          <img
+            class="card-img-top"
+            src=""
+            alt="">
 
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text-2">
-                        Some quick example text to build on the 
-                        card title and make up the bulk of the 
-                        card's content.
-                    </p>
-                      
-                    <a href="#" class="btn btn-outline-primary btn-sm">
-                        Card link
-                    </a>
-                    <a href="#" class="btn btn-outline-secondary btn-sm">
-                        <i class="far fa-heart"></i></a>
-                </div>
-            </div>
+          <div class="card-body">
+            <h5 class="card-title-2">Card title</h5>
+            <p class="card-text-2">
+              Some quick example text to build on the 
+              card title and make up the bulk of the 
+                                      card's content.
+            </p>
+
+            <a href="#" class="btn btn-outline-primary btn-sm">
+              Card link
+            </a>
+            <a href="#" class="btn btn-outline-secondary btn-sm">
+              <i class="far fa-heart"></i>
+            </a>
+          </div>
         </div>
+      </div>
     </div>
-</div>
+  </div>
 {% endblock %}
