updated pictures, and visual layout stuff

--- a/views/index.liquid
+++ b/views/index.liquid
@@ -1,12 +1,12 @@
 {% layout 'layout.liquid' %}
 {% block content %}
 
-  <div class="col d-flex justify-content-center" >
+  <div class="col d-flex justify-content-center">
     <div class="card bg-light mb-3" style="width: 48rem;">
       <div class="card text-center"></div>
-      <div class="card-header">Welcome to T.P Outfitters</div>
+      <div class="card-header">Welcome to Segundo</div>
       <div class="card-body">
-        <h5 class="card-title">Sign in to access information <br> If not a member yet, feel free to sign up <br> Only takes 5 seconds!</h5>
+        <h5 class="card-title">Sign in to your account! <br> If not a member yet, feel free to sign up <br> Only takes 5 seconds!</h5>
         <div class="btn-group btn-group-lg">
           <a href="/users/signup" class="btn btn-dark">Sign Up</a>
           <a href="/users/login" class="btn btn-success">Login</a>
