--- a/views/users/index.liquid
+++ b/views/users/index.liquid
@@ -1,6 +1,6 @@
 {% layout 'layout.liquid' %}
 {% block content %}
-  <h1 class="display-4">Dead Bird</h1>
+  <h1 class="display-4">Segundo</h1>
   <div class="btn-group btn-group-lg">
     <a href="/users/signup" class="btn btn-info">Sign Up</a>
     <a href="/users/login" class="btn btn-info">Login</a>
