--- a/public/styles.css
+++ b/public/styles.css
@@ -41,11 +41,18 @@
   word-wrap: normal;
 }
 
+.nav-link {
+  color: black;
+  font-size: large;
+}
 
 .navbar {
   position: sticky;
   top: 0;
   z-index: 999;
+  height: 100px;
+  background-color: antiquewhite;
+  
 }
 
 #content {
@@ -53,7 +60,9 @@
 }
 
 .navbar-brand {
+  font-size: xx-large;
   max-height: 100px;
+  color: black;
 }
 
 .card-text-2, .card-title-2, .card-text-3 {
@@ -68,6 +77,14 @@
 
 .card-title-2 {
   font-size: 22px;
-  font-weight: 600;
-  border-radius: 15;
+  font-weight: 100;
+  /* border-radius: 99; */
 }
+.bottom-img {
+  width: 565px;
+  height: 365px;
+}
+
+/* .card-body-1 {
+  
+} */
