--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -10,24 +10,24 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-md">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/products">T.P Outfitters</a>
+                <a class="navbar-brand" href="/products">Segundo</a>
                 {% if loggedIn %}
-                    <a class="nav-link text-light">Welcome back,{{username}}!</a>
+                    <a class="nav-link ">Welcome back,{{username}}!</a>
                 {% endif %}
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     {% if loggedIn %}
-                        <a class="nav-link text-light" href="/products">Categories</a>
-                        <a class="nav-link text-light" href="/products/about">New Product</a> 
-                        <a class="nav-link text-light" href="/users/logout">Log Out</a>
+                        <a class="nav-link " href="/products">Categories</a>
+                        <a class="nav-link " href="/products/info">New Product</a> 
+                        <a class="nav-link " href="/users/logout">Log Out</a>
 
                     {% else %}
-                        <a class="nav-link text-light" href="/users/signup">Sign Up</a>
-                        <a class="nav-link text-light" href="/users/login">Log In</a>
+                        <a class="nav-link " href="/users/signup">Sign Up</a>
+                        <a class="nav-link " href="/users/login">Log In</a>
                     {% endif%}
                 </div>
             </div>
