--- a/views/index.liquid
+++ b/views/index.liquid
@@ -2,12 +2,12 @@
 {% block content %}
 
   <div class="col d-flex justify-content-center">
-    <div class="card bg-light mb-3" style="width: 48rem;">
-      <div class="card text-center"></div>
-      <div class="card-header">Welcome to Segundo</div>
+    <div class="index-card bg-light mb-3" style="width: 48rem;">
+      <div class="index-text text-center"></div>
+      <div class="index-header">Segundo Clothing Co.</div>
       <div class="card-body">
-        <h5 class="card-title">Sign in to your account! <br> If not a member yet, feel free to sign up <br> Only takes 5 seconds!</h5>
-        <div class="btn-group btn-group-lg">
+        <h5 class="index-title">Sign in to your account! <br> If not a member yet, feel free to sign up <br> Only takes 5 seconds!</h5>
+        <div class="index-btn-group btn-group-lg">
           <a href="/users/signup" class="btn btn-dark">Sign Up</a>
           <a href="/users/login" class="btn btn-success">Login</a>
         </div>
