--- a/views/products/families.liquid
+++ b/views/products/families.liquid
@@ -9,12 +9,12 @@
     <div class="card-img-overlay">
       <div style="margin-top:15px"></div>
       <h5 class="card-title">
-        Welcome to Segundo</h5>
+        Segundo Clothing Co.</h5>
       <p class="card-text">
-        We understand there might be gear you no <br> longer need that still has a ton of life left in <br> it. That's where we come in, welcome to the <br> first Outdoor Apparel online open market! <br> Think of us as your friendly outdoors ebay, a <br> spot where you can make sure your old gear <br> ends up with someone who can still use it. <br>
-        One person's trash is another's summit piece!</p>
+        Built to go with you anywhere. <br> Imagery Inspired by classic American and <br> Salvadoran imagery, made in the United States <br> and designed to go anywhere.
+      </p>
       <br>
-      <p class="card-text-bottom">Look out for community events near you!</p>
+      <p class="card-text-bottom">Create memories with us</p>
     </div>
   </div>
   <div style="margin-top:165px"></div>
@@ -23,10 +23,14 @@
     <div class="row">
       {% for family in families %}
         <div class="col-4">
-          <div class="card mb-3" style="">
+          <div class="card mb-3">
             <h5 class="card-header">{{ family }}
             </h5>
             <div class="card-body">
+              <img
+                class="card-img-categories"
+                src="https://media.istockphoto.com/id/931042070/vector/website-construction-line-style-illustration.jpg?s=612x612&w=is&k=20&c=nUuYoZxobPuitaSBN0AtOTTz_CIevEiszvFFdjQNhXs="
+                alt="Card image">
               <a class="btn btn-info" href="/products?family={{family}}">
                 View
               </a>
@@ -57,7 +61,7 @@
             <p class="card-text-2">
               Some quick example text to build on 
               the card title and make up the bulk 
-                           of the card's content.
+                                                                                                                                                                                                                                                           of the card's content.
             </p>
 
             <a href="#" class="btn btn-outline-primary btn-sm">
@@ -85,7 +89,7 @@
             <p class="card-text-2">
               Some quick example text to build on the 
               card title and make up the bulk of the 
-                           card's content.
+                                                                                                                                                                                                                                                           card's content.
             </p>
 
             <a href="#" class="btn btn-outline-primary btn-sm">
