--- a/views/users/login.liquid
+++ b/views/users/login.liquid
@@ -4,11 +4,10 @@
   <div class="col d-flex justify-content-center">
     <div class="card text-center">
       <div class="card-header">
-        BIRD UP
       </div>
       <div class="card-body">
-        <h6 class="card-title">Welcome to F/W training 22'</h6>
-        <h6 class="card-text">Let's get ready for the stoke!</h6>
+        <h6 class="login-title">Segundo Clothing Co.</h6>
+        <h6 class="card-text">Welcome!</h6>
         <div class="container-sm">
           <form action="/users/login" method="POST">
             <fieldset>
