--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -21,13 +21,12 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     {% if loggedIn %}
-                        <a class="nav-link " href="/products">Categories</a>
-                        <a class="nav-link " href="/products/info">New Product</a> 
-                        <a class="nav-link " href="/users/logout">Log Out</a>
-
+                        <a class="nav-link" href="/products">Categories</a>
+                        <a class="nav-link" href="/products/info">About Us</a> 
+                        <a class="nav-link" href="/users/logout">Log Out</a>
                     {% else %}
-                        <a class="nav-link " href="/users/signup">Sign Up</a>
-                        <a class="nav-link " href="/users/login">Log In</a>
+                        <a class="nav-link" href="/users/signup">Sign Up</a>
+                        <a class="nav-link" href="/users/login">Log In</a>
                     {% endif%}
                 </div>
             </div>
