--- a/views/products/show.liquid
+++ b/views/products/show.liquid
@@ -1,59 +1,71 @@
 {% layout 'layout.liquid' %}
 {% block content %}
-    <div class="container-md">
-        <article>
-            <h2>{{product.name}}</h2>
-            <h4>
-                INSERT PRODUCT IMAGE HERE
-            </h4>
-            <h6>{{product.color}}</h6>
-            {% if product.owner == userId %}
-                <div class="btn-group">
-                    <a class="btn btn-primary" href="/products/edit/{{product.id}}">Edit</a>
-                    <form action="/products/{{product.id}}?_method=DELETE" method="POST">
-                        <input class="btn btn-danger" type="submit" value="Delete">
-                    </form>
-                </div>
-            {% endif %}
-        </article>
-         <hr>
-        <h6 class="card-product">
-                            {% if product.updated %}
-                                For this season, these are the following updates
-                                <br>
-                                {{ product.info }}
-                            {% else %}
-                                ADD SOMETHING HERE LATER
-                            {% endif %}
-                        </h6>
-        <hr>
-        {% if loggedIn %}
-            <div class="col-md-6">
-                <form action="/comments/{{product.id}}" method="POST">
-                    <fieldset>
-                        <legend>Leave a review</legend>
-                        <label class="form-label">Review:</label>
-                        <input class="form-control" type="text" placeholder="...." name="note" required>
-                    </fieldset>
-                    <input class="btn btn-success" type="submit" value="Submit">
-                </form>
-            </div>
-        {% else %}
-            <div class="col-md-6">
-                <small>If you'd like to leave a review, please log in...</small>
-            </div>
-        {% endif %}
-        <hr>
-        {% if product.comments.length > 0%}
-            <div class="container-sm justify-content-center">
-                <div class="col-md-8 col-lg-6">
-                    {% for comment in product.comments %}
-                        {% render '../comment.liquid', comment: comment, userId: userId, product: product %}
-                    {% endfor %}
-                </div>
-            </div>
-        {% else %}
-            <small>There are no comments yet</small>
-        {% endif %}
-    </div>
+  <div class="container-md">
+    <article>
+      <h2>{{ product.name }}</h2>
+      <img
+        class="card-img"
+        src={{product.picture}}
+        alt="Card image">
+      <h6>{{ product.color }}</h6>
+      {% if product.owner == userId %}
+        <div class="btn-group">
+          <a class="btn btn-primary" href="/products/edit/{{product.id}}">Edit</a>
+          <form action="/products/{{product.id}}?_method=DELETE" method="POST">
+            <input
+              class="btn btn-danger"
+              type="submit"
+              value="Delete">
+          </form>
+        </div>
+      {% endif %}
+    </article>
+    <hr>
+    <h6 class="card-product">
+      {% if product.updated %}
+        For this season, these are the following updates
+        <br>
+        {{ product.info }}
+      {% else %}
+        ADD SOMETHING HERE LATER
+      {% endif %}
+    </h6>
+    <hr>
+    {% if loggedIn %}
+      <div class="col-md-6">
+        <form action="/comments/{{product.id}}" method="POST">
+          <fieldset>
+            <legend>Leave a review</legend>
+            <label class="form-label">Review:</label>
+            <input
+              class="form-control"
+              type="text"
+              placeholder="...."
+              name="note"
+              required>
+          </fieldset>
+          <input
+            class="btn btn-success"
+            type="submit"
+            value="Submit">
+        </form>
+      </div>
+    {% else %}
+      <div class="col-md-6">
+        <small>If you'd like to leave a review, please log in...</small>
+      </div>
+    {% endif %}
+    <hr>
+    {% if product.comments.length > 0 %}
+      <div class="container-sm justify-content-center">
+        <div class="col-md-8 col-lg-6">
+          {% for comment in product.comments %}
+            {% render '../comment.liquid', comment: comment, userId: userId, product: product %}
+          {% endfor %}
+        </div>
+      </div>
+    {% else %}
+      <small>There are no comments yet</small>
+    {% endif %}
+  </div>
 {% endblock %}
