took out a button on one of the cards

--- a/views/products/families.liquid
+++ b/views/products/families.liquid
@@ -61,15 +61,15 @@
             <p class="card-text-2">
               Some quick example text to build on 
               the card title and make up the bulk 
-                                                                                                                                                                                                                                                           of the card's content.
+               of the card's content.
             </p>
 
             <a href="#" class="btn btn-outline-primary btn-sm">
               Card link
             </a>
-            <a href="#" class="btn btn-outline-secondary btn-sm">
-              <i class="far fa-heart"></i>
-            </a>
+             {% comment %} <a href="#" class="btn btn-outline-secondary btn-sm">
+              <i class="far fa-heart"></i> 
+            </a> {% endcomment %} 
           </div>
         </div>
       </div>
@@ -89,14 +89,12 @@
             <p class="card-text-2">
               Some quick example text to build on the 
               card title and make up the bulk of the 
-                                                                                                                                                                                                                                                           card's content.
+              card's content.
             </p>
 
             <a href="#" class="btn btn-outline-primary btn-sm">
               Card link
             </a>
-            <a href="#" class="btn btn-outline-secondary btn-sm">
-              <i class="far fa-heart"></i>
             </a>
           </div>
         </div>
