created a page where the products will be displayed later and added a new controller

--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -21,7 +21,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     {% if loggedIn %}
-                        <a class="nav-link" href="/products">Categories</a>
+                        <a class="nav-link" href="/products/products">Shop</a>
                         <a class="nav-link" href="/products/info">About Us</a> 
                         <a class="nav-link" href="/users/logout">Log Out</a>
                     {% else %}
